avoid stretching small link preview images

--- a/app/style/components/asset/link-preview-asset.less
+++ b/app/style/components/asset/link-preview-asset.less
@@ -53,9 +53,7 @@ link-preview-asset {
     }
 
     > img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      max-width: 100%;
     }
   }
 }
